Move prevention of image overlap in show product to AI2896

--- a/cirandas/stylesheets/theme.scss
+++ b/cirandas/stylesheets/theme.scss
@@ -1627,22 +1627,10 @@ div.token-input-dropdown-facet {
 
 #product-info .field-name, #product-info .field-value {
   color: #EA6400;
-  font-size: 20px;
 }
 
 #product-info .field-name {
   display:none;
-}
-
-body.template-default #product-image, body.template-2leftbars #product-image {
-  width: 250px;
-}
-body.template-default #content .product-pic, body.template-2leftbars .product-pic {
-  width: 250px;
-}
-body.template-default #product-info .field-name, body.template-default #product-info .field-value,  
-body.template-2leftbars #product-info .field-name, body.template-2leftbars #product-info .field-value {
-  font-size: 12px;
 }
 
 #content .block #display-product-name h2 {
